--- a/user/config.yml
+++ b/user/config.yml
@@ -2,10 +2,11 @@ type: yml
 auth: 
   sign_key: somerandomsignkey
 
-mysql: 
-  port:
-  host: localhost
-  db_name: gameapp_db
+mysql_database: 
+  port: 3308
+  host: 127.0.0.1
+  database_name: gold
+  database_pass: gold552
 
 http_server:
   port: :7333
