--- a/currency/config.yml
+++ b/currency/config.yml
@@ -1,12 +1,12 @@
 type: yml
-auth: 
+auth:
   sign_key: somerandomsignkey
 
-mysql_database: 
+mysql_config:
   port: 3308
   host: 127.0.0.1
   database_name: currency
-  database_pass: currency552
+  database_pass: gold552
 
 http_server:
   port: :7333
